# rs-practice

./: .gitignore  README.md
PointerNBox/: Cargo.toml
PointerNBox/src/: main.rs
adder/src/: lib.rs
advent_of_code_22/: Cargo.toml
advent_of_code_22/src/: main.rs
advent_of_code_22/src/day_five/: solution.rs
advent_of_code_22/src/day_four/: solution.rs
advent_of_code_22/src/day_one/: solution.rs
advent_of_code_22/src/day_seven/: solution.rs  solutions.rs
advent_of_code_22/src/day_six/: solution.rs
advent_of_code_22/src/day_three/: solution.rs  testinput.txt
advent_of_code_22/src/day_two/: solution.rs
apt_hook/: Cargo.toml
apt_hook/src/: main.rs
area/src/: main.rs
blog/src/: lib.rs
branches/: Cargo.toml
branches/src/: main.rs
chatter/: Cargo.toml  README.md  client.py
chatter/src/: lib.rs  main.rs
christmasdays/: Cargo.toml
christmasdays/src/: main.rs
closures/src/: main.rs
communicator/src/: lib.rs
conc_works/: Cargo.toml
conc_works/src/: main.rs
dbus_work/: Cargo.toml
dbus_work/src/: main.rs  services.rs
enums/src/: main.rs
err_handling/: Cargo.toml
err_handling/src/: main.rs
extensive_tests/: Cargo.toml
hello-rocket/: Cargo.toml
hello-sdl/: Cargo.toml
many_linkedlists/: Cargo.toml
mod_comp/: Cargo.toml
my-redis/: Cargo.toml
nom-works/: Cargo.toml
ownership_slice/: Cargo.toml
ownership_string/: Cargo.toml
random_projects/: Cargo.toml  questions.md
random_scripts/: str.s  unions_enum.rs
stats_works/: Cargo.toml
strings_more/: Cargo.toml
tcp_works/: Cargo.toml
traits_basics/: Cargo.toml
(+78 files in other folders)
