[package]
name = "advent_of_code_22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.regex]
version = "1.3"
default-features = true
# regex currently requires the standard library, you must re-enable it.
features = ["std"]
