[package]
name = "apt_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
